--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -32,7 +32,7 @@
               .nav-collapse.collapse
                 %ul.nav
                   %li{"class" => ("active" if controller_name == 'dashboard' and action_name == 'index')}
-                    = link_to 'Dashboard', admin_root_path
+                    = link_to 'Painel', admin_root_path
                   %li{"class" => ("active" if controller_name == 'leads' and action_name == 'index')}
                     = link_to 'Leads', admin_leads_path(q: {prospected_at_null: true}, active: {prospected_at_null: true})
                   %li{"class" => ("active" if controller_name == 'vouchers' and action_name == 'index')}
