--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -31,12 +31,12 @@
               = link_to 'MultiCommerce', admin_root_url, class: 'brand'
               .nav-collapse.collapse
                 %ul.nav
-                  %li{"class" => ("active" if controller_name == 'dashboard' and action_name == 'index')}
+                  %li{"class" => ("active" if controller_name == 'dashboard')}
                     = link_to 'Painel', admin_root_path
-                  %li{"class" => ("active" if controller_name == 'leads' and action_name == 'index')}
+                  %li{"class" => ("active" if controller_name == 'leads')}
                     = link_to 'Leads', admin_leads_path(q: {prospected_at_null: true}, active: {prospected_at_null: true})
-                  %li{"class" => ("active" if controller_name == 'vouchers' and action_name == 'index')}
-                    = link_to 'Vouchers', admin_vouchers_path
+                  / %li{"class" => ("active" if controller_name == 'vouchers')}
+                  /   = link_to 'Vouchers', admin_vouchers_path
                 %ul.nav.pull-right
                   %li.dropdown
                     %a.dropdown-toggle{href: '#', "data-toggle" => "dropdown"} 
