--- a/app/views/layouts/home.html.haml
+++ b/app/views/layouts/home.html.haml
@@ -22,7 +22,7 @@
             %h1
               = link_to "Wizard - Você Bilíngue", root_path, title: "Wizard - Você Bilíngue"
           #go-to
-            %a{:href => "#"}
+            %a{:href => "http://www.wizard.com.br/default.aspx"}
               %span Ir para o site da Wizard &raquo;
         = yield
         #footer
