--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -36,65 +36,28 @@
                   %li{"class" => ("active" if controller_name == 'leads')}
                     = link_to 'Leads', admin_leads_path(q: {prospected_at_null: true}, active: {prospected_at_null: true})
                   - if current_user.manager?
-                    %li{"class" => ("active" if controller_name == 'unities')}
-                      = link_to 'Franqueados', admin_unities_path
-                  / %li{"class" => ("active" if controller_name == 'vouchers')}
-                  /   = link_to 'Vouchers', admin_vouchers_path
+                    / %li{"class" => ("active" if controller_name == 'unities')}
+                    /   = link_to 'Franqueados', admin_unities_path
+                    %li.dropdown{"class" => ("active" if controller_name == 'unities')}
+                      %a.dropdown-toggle{href: '#', "data-toggle" => "dropdown"} 
+                        %span Franqueados                        
+                        %b.caret
+                      %ul.dropdown-menu
+                        %li
+                          = link_to 'Todos', admin_unities_path
+                        %li
+                          = link_to 'Ranking', ranking_admin_unities_path
                 %ul.nav.pull-right
                   %li.dropdown
                     %a.dropdown-toggle{href: '#', "data-toggle" => "dropdown"} 
                       %span
                         = current_user.email
-                        / %i
-                        /   = "(#{current_user.role})"
                       %b.caret
                     %ul.dropdown-menu
                       %li
                         = link_to 'Editar', edit_user_registration_path
                       %li.divider
                       %li
-                        = link_to 'Sair', destroy_user_session_path, :method => :delete
-                  / %li
-                  /   = link_to 'editar', edit_user_registration_path
-                  / %li
-                  /   = link_to 'sair', destroy_user_session_path, :method => :delete            
+                        = link_to 'Sair', destroy_user_session_path, :method => :delete       
       .container
         = yield
-
-  / - if user_signed_in?
-  /   %body{style: "padding-top: 60px;"}
-  /     .container
-  /       .alert
-  /         %button.close{"data-dismiss" => "alert"} ×
-  /         %strong Atenção!
-  /         = alert
-  /     .navbar.navbar-inverse.navbar-fixed-top
-  /       .navbar-inner
-  /         .container
-  /           %button.btn.btn-navbar
-  /             %span.icon-bar
-  /             %span.icon-bar
-  /             %span.icon-bar
-  /           %a.brand{href: "./index.html"} MultiCommerce
-  /           .nav-collapse.collapse
-  /             %ul.nav
-  /               %li.active
-  /                 = link_to 'Leads', admin_leads_path
-  /               %li
-  /                 = link_to 'Vouchers', admin_vouchers_path
-  /             %ul.nav.pull-right
-  /               %li
-  /                 = link_to 'editar', edit_user_registration_path
-  /               %li
-  /                 = link_to 'sair', destroy_user_session_path, :method => :delete
-  /     .container
-  /       = yield
-  / - else
-  /   %body{style: "padding-top: 60px;"}
-  /     - if alert
-  /       .container
-  /         .alert
-  /           %button.close{"data-dismiss" => "alert"} ×
-  /           %strong Atenção!
-  /           = alert
-  /     = yield
