Layout and Voucher

--- a/app/assets/stylesheets/application/base.sass
+++ b/app/assets/stylesheets/application/base.sass
@@ -66,3 +66,114 @@ form
     text-decoration: none
     font-size: 11px
 
+.btn
+  text-decoration: none
+  display: inline-block
+  padding: 4px 12px
+  margin-bottom: 0
+  font-size: 14px
+  line-height: 20px
+  color: #333
+  text-align: center
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75)
+  vertical-align: middle
+  cursor: pointer
+  background-color: whiteSmoke
+  background-image: -moz-linear-gradient(top, white, #E6E6E6)
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(#E6E6E6))
+  background-image: -webkit-linear-gradient(top, white, #E6E6E6)
+  background-image: -o-linear-gradient(top, white, #E6E6E6)
+  background-image: linear-gradient(to bottom, white, #E6E6E6)
+  background-repeat: repeat-x
+  border: 1px solid #BBB
+  border-color: #E6E6E6 #E6E6E6 #BFBFBF
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25)
+  border-bottom-color: #A2A2A2
+  -webkit-border-radius: 4px
+  -moz-border-radius: 4px
+  border-radius: 4px
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0)
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false)
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05)
+  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05)
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05)
+  
+.btn-large
+  padding: 10px 20px
+  font-size: 17.5px
+  -webkit-border-radius: 6px
+  -moz-border-radius: 6px
+  border-radius: 6px
+
+.btn-medium
+  padding: 7px 12px
+  font-size: 14.5px
+  -webkit-border-radius: 6px
+  -moz-border-radius: 6px
+  border-radius: 6px
+  
+.btn-small
+  padding: 5px 9px
+  font-size: 11px
+  -webkit-border-radius: 6px
+  -moz-border-radius: 6px
+  border-radius: 6px
+
+.btn-primary
+  color: white
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25)
+  background-color: #FFA92E
+  background-image: -moz-linear-gradient(top, #FDBA12, #FFA92E)
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#FDBA12), to(#FFA92E))
+  background-image: -webkit-linear-gradient(top, #FDBA12, #FFA92E)
+  background-image: -o-linear-gradient(top, #FDBA12, #FFA92E)
+  background-image: linear-gradient(to bottom, #FDBA12, #FFA92E)
+  background-repeat: repeat-x
+  border-color: #FFA92E #FFA92E #FDBA12
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25)
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FDBA12', endColorstr='#FFA92E', GradientType=0)
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false)
+  
+.btn-secondary
+  color: white
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25)
+  background-color: #0149CC
+  background-image: -moz-linear-gradient(top, #007ACC, #007ACC)
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#007ACC), to(#0149CC))
+  background-image: -webkit-linear-gradient(top, #007ACC, #0149CC)
+  background-image: -o-linear-gradient(top, #007ACC, #0149CC)
+  background-image: linear-gradient(to bottom, #007ACC, #0149CC)
+  background-repeat: repeat-x
+  border-color: #FFA92E #FFA92E #FDBA12
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25)
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#007ACC', endColorstr='#0149CC', GradientType=0)
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false)
+  &:hover
+    background-color: #FFA92E
+    background-image: -moz-linear-gradient(top, #FDBA12, #FFA92E)
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#FDBA12), to(#FFA92E))
+    background-image: -webkit-linear-gradient(top, #FDBA12, #FFA92E)
+    background-image: -o-linear-gradient(top, #FDBA12, #FFA92E)
+    background-image: linear-gradient(to bottom, #FDBA12, #FFA92E)
+    background-repeat: repeat-x
+    border-color: #FFA92E #FFA92E #FDBA12
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25)
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FDBA12', endColorstr='#FFA92E', GradientType=0)
+    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false)
+
+.btn-secondary-selected
+  background-color: #FFA92E
+  background-image: -moz-linear-gradient(top, #FDBA12, #FFA92E)
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#FDBA12), to(#FFA92E))
+  background-image: -webkit-linear-gradient(top, #FDBA12, #FFA92E)
+  background-image: -o-linear-gradient(top, #FDBA12, #FFA92E)
+  background-image: linear-gradient(to bottom, #FDBA12, #FFA92E)
+  background-repeat: repeat-x
+  border-color: #FFA92E #FFA92E #FDBA12
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25)
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FDBA12', endColorstr='#FFA92E', GradientType=0)
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false)
+    
+
+
+
