--- a/app/views/home/_unity.html.haml
+++ b/app/views/home/_unity.html.haml
@@ -1,9 +1,9 @@
 .unity.result-unity{ id: "unity_"+unity.id.to_s }
   .result-left
     /= submit_tag "Inscrever", class: "subscribe_button btn-search-sign-in", "data-id" => unity.id.to_s
-    = link_to "Inscrever", "/inscricao/#{unity.id.to_s}", class: 'subscribe'
+    = link_to "Inscrever", "/inscricao/#{unity.id.to_s}", class: 'subscribe btn btn-large btn-primary'
 
-    %span Inscreva-se agora e ganhe desconto na matrícula
+    %p Inscreva-se agora e ganhe desconto!
   .result-center
     %h2= unity.name
     %span= unity.address
