--- a/app/assets/stylesheets/application/pagination.sass
+++ b/app/assets/stylesheets/application/pagination.sass
@@ -1,52 +1,45 @@
-.pagination
-  cursor: default
-  a, span, em
-    padding: 0.2em 0.5em
-    display: block
-    float: left
-    margin-right: 1px
-    font-size: 14px
-  .disabled
-    color: #999999
-    border: 1px solid #dddddd
-    -moz-border-radius: 5px 5px 5px 5px
-    -webkit-border-radius: 5px 5px 5px 5px
-  .current
-    font-style: normal
-    font-weight: bold
-    background: #3D7996
-    color: white
-    border: 1px solid #3D7996
-    -moz-border-radius: 5px 5px 5px 5px
-    -webkit-border-radius: 5px 5px 5px 5px
-  a
-    text-decoration: none
-    color: #3D7996
-    border: 1px solid #3D7996
-    -moz-border-radius: 5px 5px 5px 5px
-    -webkit-border-radius: 5px 5px 5px 5px
-    &:hover, &:focus
-      color: #000033
-      border-color: #000033
-  .page_info
-    background: #3D7996
-    color: white
-    padding: 0.4em 0.6em
-    width: 22em
-    margin-bottom: 0.3em
-    text-align: center
-    b
-      color: #000033
-      background: #2e6ab1 + 60
-      padding: 0.1em 0.25em
-  &:after
-    content: "."
-    display: block
-    height: 0
-    clear: both
-    visibility: hidden
-  * html &
-    height: 1%
-  *:first-child+html &
-    overflow: hidden
+.pagination-right
+  text-align: right
 
+.pagination
+  margin: 20px 0
+  display: block
+        
+.pagination 
+  ul 
+    & > li:first-child 
+      & > a
+        border-left-width: 1px
+        -webkit-border-bottom-left-radius: 4px
+        border-bottom-left-radius: 4px
+        -webkit-border-top-left-radius: 4px
+        border-top-left-radius: 4px
+        -moz-border-radius-bottomleft: 4px
+        -moz-border-radius-topleft: 4px
+
+.pagination
+  ul
+    display: inline-block
+    padding: 0
+    margin-bottom: 0
+    margin-left: 0
+    -webkit-border-radius: 4px
+    -moz-border-radius: 4px
+    border-radius: 4px
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05)
+    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05)
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05)
+    li
+      display: inline
+      line-height: 20
+      a
+        border-width: 1px
+        color: #3D7996
+        text-decoration: none
+        float: left
+        padding: 4px 12px
+        line-height: 20px
+        text-decoration: none
+        background-color: #F7FBFC
+        border: 1px solid #DDD
+        border-left-width: 0
