--- a/app/assets/stylesheets/application/search.sass
+++ b/app/assets/stylesheets/application/search.sass
@@ -110,8 +110,8 @@
     float: left
     width: 130px
     text-align: center
-  span
-    font-size: 16px
+  p
+    font-size: 14px
     color: #777777
   .result-center
     float: left
