--- a/app/views/home/subscribe.html.haml
+++ b/app/views/home/subscribe.html.haml
@@ -2,97 +2,104 @@
   %p= alert
   = semantic_form_for @voucher, url: checkout_voucher_path(@voucher), validate: false do |f|
     = f.hidden_field :id
-    #open-result
-      #open-result-top
-        / %span.text-result-medium 
-        /   Você escolheu a unidade
-        /   %strong= @unity.name
-        / %p= @unity.address
-        %span.text-result-medium Qual o melhor horário para você estudar?
-        %fieldset#period
-        / - @timetables.each do |timetable|
-        /   %label.course_period{"data-id" => timetable.id}
-        /     = button_tag timetable.title, type: "button", class: 'timetable'
-        /     %span= timetable.description
-        /= f.input :timetable_id, as: :radio, collection: @timetables
-        / = hidden_field_tag "voucher[timetable_id]", timetable.id
-        - Timetable.all.each do |timetable|
-          .btn-group{"data-toggle" => "buttons-radio", "data-toggle-name" => "voucher[timetable_id]"}
-            = button_tag timetable.title, type: "button", class: 'btn', value: timetable.id, "data-toggle" => "button"
-        = f.hidden_field :timetable_id, value: Timetable.find_by_title('Flex').id
-      #open-result-center
-        %span.text-result-medium Preencha seus dados:
-        %fieldset#your-data
-          = f.semantic_fields_for :address do |a|
-            = a.input :zipcode, input_html: { id: 'zipcode', class: "input-1" }, wrapper_html: { class: "wrapper" }
-            = a.input :street, input_html: { id: 'street', class: "input-4" }, wrapper_html: { class: "wrapper" }
-            = a.input :complement, input_html: { id: 'complement', class: "input-4" }, wrapper_html: { class: "wrapper" }
-            = a.input :number, input_html: { id: 'number', class: "input-1" }, wrapper_html: { class: "wrapper" }
-            = a.input :district, input_html: { id: 'district', class: "input-1" }, wrapper_html: { class: "wrapper" }
-            = a.input :city, input_html: { id: 'city', class: "input-1" }, wrapper_html: { class: "wrapper" }
-            = a.input :state, :as => :select, :collection => %w[AC AL AP AM BA CE DF ES GO MA MT MS MG PA PB PR PE PI RJ RN RS RO RR SC SP SE TO], input_html: { id: 'state', class: "input-1" }, wrapper_html: { class: "wrapper" }
-          / = semantic_fields_for @lead, validate: true do |l|
-          /   = l.fields_for :address do |a|
-          /     = a.input :zipcode, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
-          /     = a.input :street, input_html: { class: "input-4" }, wrapper_html: { class: "wrapper" }
-          /     = a.input :complement, input_html: { class: "input-4" }, wrapper_html: { class: "wrapper" }
-          /     = a.input :number, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
-          /     = a.input :district, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
-          /     = a.input :city, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
-          /     = a.input :state, :as => :select, :collection => %w[AC AL AP AM BA CE DF ES GO MA MT MS MG PA PB PR PE PI RJ RN RS RO RR SC SP SE TO], input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
-          /   /= l.input :phone_code, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
-          /   /= l.input :phone, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
-          /   /= l.input :cpf, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
+    .result-search
+      .result-center
+        %h2= @voucher.unity.name
+        %span= @voucher.unity.address
+        %h2= @voucher.unity.phone
+    .result-search
+      #open-result
+        #period
+          %h2 Qual o melhor horário para você estudar?
+          / %fieldset#period
+          / - @timetables.each do |timetable|
+          /   %label.course_period{"data-id" => timetable.id}
+          /     = button_tag timetable.title, type: "button", class: 'timetable'
+          /     %span= timetable.description
+          /= f.input :timetable_id, as: :radio, collection: @timetables
+          / = hidden_field_tag "voucher[timetable_id]", timetable.id
+          %ul
+            - Timetable.all.each do |timetable|
+              %li{"data-toggle" => "buttons-radio", "data-toggle-name" => "voucher[timetable_id]"}
+                = button_tag timetable.title, type: "button", class: 'btn btn-large btn-secondary', value: timetable.id, "data-toggle" => "button"
+          = f.hidden_field :timetable_id, value: Timetable.find_by_title('Flex').id
+        #billing
+          #info
+            %h2 Preencha seus dados:
+            %fieldset#your-data
+              = f.semantic_fields_for :address do |a|
+                = a.input :zipcode, input_html: { id: 'zipcode', class: "input-medium" }, wrapper_html: { class: "wrapper" }
+                = a.input :street, input_html: { id: 'street', class: "input-large" }, wrapper_html: { class: "wrapper" }
+                = a.input :number, input_html: { id: 'number', class: "input-medium" }, wrapper_html: { class: "wrapper" }
+                = a.input :complement, input_html: { id: 'complement', class: "input-medium" }, wrapper_html: { class: "wrapper" }
+                = a.input :district, input_html: { id: 'district', class: "input-medium" }, wrapper_html: { class: "wrapper" }
+                = a.input :city, input_html: { id: 'city', class: "input-large" }, wrapper_html: { class: "wrapper" }
+                = a.input :state, :as => :select, :collection => %w[AC AL AP AM BA CE DF ES GO MA MT MS MG PA PB PR PE PI RJ RN RS RO RR SC SP SE TO], input_html: { id: 'state', class: "" }, wrapper_html: { class: "wrapper" }
+              / = semantic_fields_for @lead, validate: true do |l|
+              /   = l.fields_for :address do |a|
+              /     = a.input :zipcode, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
+              /     = a.input :street, input_html: { class: "input-4" }, wrapper_html: { class: "wrapper" }
+              /     = a.input :complement, input_html: { class: "input-4" }, wrapper_html: { class: "wrapper" }
+              /     = a.input :number, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
+              /     = a.input :district, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
+              /     = a.input :city, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
+              /     = a.input :state, :as => :select, :collection => %w[AC AL AP AM BA CE DF ES GO MA MT MS MG PA PB PR PE PI RJ RN RS RO RR SC SP SE TO], input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
+              /   /= l.input :phone_code, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
+              /   /= l.input :phone, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
+              /   /= l.input :cpf, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
 
-        %fieldset#your-data-right
-          = render partial: "home/product", collection: current_franchise.products, locals: { f: f }
-          #total
-            %span.total-left Total:
-            %span.total-right
-              /= number_to_currency(current_franchise.products.sum(&:price))
-              = hidden_field_tag 'voucher_total', voucher_total
-              = number_to_currency(voucher_total)
-        %span.text-result-medium Forma de Pagamento:
-        %fieldset#payment
-          %label
-            = f.radio_button :payment_method, :boleto, checked: true, class: 'payment_method'
-            = image_tag "application/barcode.png"
-          %label
-            = f.radio_button :payment_method, :cartao_visa, class: ['payment_method', 'credit-card']
-            = image_tag "application/visa.png"
-          %label
-            = f.radio_button :payment_method, :cartao_master, class: ['payment_method', 'credit-card']
-            = image_tag "application/master.png"
-        %fieldset#credit-card
-          %span.text-result-medium Dados do cartão:
-          / = semantic_fields_for @lead, validate: true do |l|
-          /   = l.input :cpf, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }, validate: true
-          = f.input :cpf, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
-          = f.semantic_fields_for :credit_card, validate: false do |c|
-            / = c.input :cpf, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
-            = c.input :card_holder_name, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
-            = c.input :number, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
-            = c.input :security_code, input_html: { class: "input-1", maxlength: 3 }, wrapper_html: { class: "wrapper" }            
-            = c.input :expiration_date, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }, placeholder: 'MM/AAAA'     
-            = c.input :installments, as: :select, collection: options_for_select((1..12).to_a, 1), input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }       
-            #installments-placeholder
-            / = l.semantic_fields_for :credit_card, validate: false do |c|
-            /   = c.input :card_holder_name, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
-            /   = c.input :number, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
-            /   = c.input :security_code, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }            
-            /   = c.input :expiration_date, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }            
-            /   = c.input :installments, as: :select, collection: options_for_select((1..12).to_a), input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
-        %fieldset#button
-          = f.submit "Comprar Curso", class: "btn-purchase"
-        #content-footer
-          = link_to "« voltar", :back, id: "content-footer-link-back"
-          = link_to t('.print_voucher'), voucher_url(@voucher), id: "print-voucher"
+            %fieldset#your-data-right
+              = render partial: "home/product", collection: current_franchise.products, locals: { f: f }
+              #total
+                %span.total-left Total:
+                %span.total-right
+                  /= number_to_currency(current_franchise.products.sum(&:price))
+                  = hidden_field_tag 'voucher_total', voucher_total
+                  = number_to_currency(voucher_total)
+          %h2 Escolha uma Forma de Pagamento:
+          %fieldset#payment
+            %label
+              = f.radio_button :payment_method, :boleto, checked: true, class: 'payment_method'
+              = image_tag "application/barcode.png"
+            %label
+              = f.radio_button :payment_method, :cartao_visa, class: ['payment_method', 'credit-card']
+              = image_tag "application/visa.png"
+            %label
+              = f.radio_button :payment_method, :cartao_master, class: ['payment_method', 'credit-card']
+              = image_tag "application/master.png"
+          %fieldset#credit-card
+            %h2 Dados do cartão de crédito:
+            / = semantic_fields_for @lead, validate: true do |l|
+            /   = l.input :cpf, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }, validate: true
+            = f.input :cpf, input_html: { class: "input-medium" }, wrapper_html: { class: "wrapper" }
+            = f.semantic_fields_for :credit_card, validate: false do |c|
+              / = c.input :cpf, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
+              = c.input :card_holder_name, input_html: { class: "input-large" }, wrapper_html: { class: "wrapper" }
+              = c.input :number, input_html: { class: "input-large" }, wrapper_html: { class: "wrapper" }
+              = c.input :security_code, input_html: { class: "input-medium", maxlength: 3 }, wrapper_html: { class: "wrapper" }            
+              = c.input :expiration_date, input_html: { class: "input-medium" }, wrapper_html: { class: "wrapper" }, placeholder: 'MM/AAAA'     
+              = c.input :installments, as: :select, collection: options_for_select((1..12).to_a, 1), input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }       
+
+              / = l.semantic_fields_for :credit_card, validate: false do |c|
+              /   = c.input :card_holder_name, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
+              /   = c.input :number, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
+              /   = c.input :security_code, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }            
+              /   = c.input :expiration_date, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }            
+              /   = c.input :installments, as: :select, collection: options_for_select((1..12).to_a), input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
+          #installments-placeholder
+          %fieldset#button
+            = f.submit "Comprar Curso", class: "btn-purchase"
+          #content-footer
+            = link_to "« voltar", :back, id: "content-footer-link-back"
+            = link_to t('.print_voucher'), voucher_url(@voucher), id: "print-voucher", class: "btn btn-small"
           
 %script#installments-options{type: "text/x-handlebars-template"}
+  / {{descricao}}
+  %h2 Parcele em até 12x!
   %ul
-    {{descricao}}
     {{#each parcelas}}
     %li  
-      {{this.quantidade}}x - R$ {{this.valor}} (R$ {{this.total}})
+      %span.number {{this.quantidade}}x 
+      %span.amount de R$ {{this.valor}}
       / %input{type: 'radio', name: 'voucher[credit_card_attributes][installments]'} {{this.quantidade}}x - R$ {{this.valor}} (R$ {{this.total}})
     {{/each}}
