Privacy Policies, Success Page, Select box's stylesheet

--- a/app/assets/stylesheets/application/sign-up.sass
+++ b/app/assets/stylesheets/application/sign-up.sass
@@ -18,6 +18,15 @@
     color: red
     clear: both
     height: 12px
+  .notice
+    color: #851700
+    display: block
+    font-size: 10px
+    font-weight: bold
+    margin-left: 40px
+    text-align: center
+    a 
+      color: #851700
 
 #sign-up-left
   float: left
@@ -63,8 +72,6 @@
     margin-top: 55px
     position: absolute
 
-/*sign-up form*/
-
 #sign-up-form
   margin-left: 20px
   margin-top: 20px
@@ -81,20 +88,17 @@
     width: 100px
   .btn-label
     float: left
-    margin-bottom: 10px
     margin-left: -20px
     width: 260px
   li
     list-style: none
 
-/*input.input-1 for multiple fields*/
 
 input.text
   background: image-url("application/bg-input-1.png") no-repeat scroll center center transparent
   border: medium none
   height: 31px
   margin-bottom: 10px
-  //padding-left: 0px
   width: 206px
   float: left
   text-indent: 7px
@@ -144,11 +148,4 @@ input.text
 #box-sign-up span
   float: left
   width: 225px
-  &.text-sign-up
-    color: #851700
-    display: block
-    font-size: 10px
-    font-weight: bold
-    margin-left: 40px
-    text-align: center
 
