--- a/app/views/vouchers/success.html.haml
+++ b/app/views/vouchers/success.html.haml
@@ -1,2 +1,11 @@
-%h2 sucesso
-= @voucher.inspect
+#thanks
+  #image-float
+    = image_tag "application/image-float.png"
+  #sign-up
+    #sign-up-left
+      #text-1
+        %h2 Cadastro realizado!
+      #text-2
+        %h4 Parabéns! Imprima o seu voucher clicando no botão abaixo e leve até a Wizard que você escolheu!
+      #text-3
+        %a#print-voucher Imprimir voucher e ir até a unidade
