--- a/app/assets/stylesheets/application/subscribe.sass
+++ b/app/assets/stylesheets/application/subscribe.sass
@@ -23,22 +23,40 @@ h3
   font-size: 13px
   
 input
+  font-size: 14px
+  height: 31px
+  margin-bottom: 10px
+  border: medium none
+  text-indent: 7px
   &.input-large
     background: image-url("application/bg-input-4.png") no-repeat scroll center center transparent
-    border: medium none
-    height: 31px
-    margin-bottom: 10px
     padding-left: 5px
     width: 366px
-    text-indent: 7px
   &.input-medium
     background: image-url("application/bg-input-1.png") no-repeat scroll center center transparent
-    border: medium none
-    height: 31px
-    margin-bottom: 10px
     width: 206px
     float: left
-    text-indent: 7px
+    
+select
+  background-color: white
+  border: 2px solid #FFF
+  height: 31px
+  line-height: 31px
+  padding: 4px 6px
+  margin-bottom: 10px
+  font-size: 14px
+  line-height: 20px
+  vertical-align: middle
+  -webkit-border-radius: 4px
+  -moz-border-radius: 4px
+  border-radius: 4px
+  -webkit-appearance: menulist
+  box-sizing: border-box
+  -webkit-box-align: center
+  border-image: initial
+  white-space: pre
+  -webkit-rtl-ordering: logical
+
 
 #billing
   label
@@ -151,7 +169,7 @@ input
 
 #info
   clear: both
-  height: 390px
+  height: 410px
 
 #total
   background-color: #FFFFFF
