--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -31,7 +31,7 @@
                                                 placeholder: "Digite seu bairro, rua ou CEP"}
 
       = f.action :submit, label: :subscribe, button_html: { class: "btn-signup" }, wrapper_html: { class: "btn-label" }
-    %span.text-sign-up As informações são confidenciais, para uso exclusivo da Wizard, e não serão repassadas para terceiros.
+    %span.notice As informações são confidenciais, para uso exclusivo da Wizard, e não serão repassadas para terceiros. <a href="2">Leia nossa política de privacidade</a>
 #reasons
   #five-reasons
     %h2
