--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -31,7 +31,9 @@
                                                 placeholder: "Digite seu bairro, rua ou CEP"}
 
       = f.action :submit, label: :subscribe, button_html: { class: "btn-signup" }, wrapper_html: { class: "btn-label" }
-    %span.notice As informações são confidenciais, para uso exclusivo da Wizard, e não serão repassadas para terceiros. <a href="2">Leia nossa política de privacidade</a>
+    %span.notice 
+      As informações são confidenciais, para uso exclusivo da Wizard, e não serão repassadas para terceiros. 
+      = link_to 'Leia nossa política de privacidade', privacy_policy_path, target: 'blank'
 #reasons
   #five-reasons
     %h2
