--- a/app/views/vouchers/success.html.haml
+++ b/app/views/vouchers/success.html.haml
@@ -8,4 +8,4 @@
       #text-2
         %h4 Parabéns! Imprima o seu voucher clicando no botão abaixo e leve até a Wizard que você escolheu!
       #text-3
-        %a#print-voucher Imprimir voucher e ir até a unidade
+        = link_to "Imprimir voucher e ir até a unidade", voucher_path(@voucher), id: 'print-voucher'
