--- a/app/assets/stylesheets/application/subscribe.sass
+++ b/app/assets/stylesheets/application/subscribe.sass
@@ -9,11 +9,6 @@
   float: left
   margin-bottom: 20px
 
-fieldset
-  margin: 0
-  padding: 0
-  border: none
-
 h2
   color: #3D7996
   font-size: 15px
@@ -71,6 +66,10 @@ select
       color: red
       font-size: 10px
       margin-left: 5px
+  fieldset
+    margin: 0
+    padding: 0
+    border: none
     
 #open-result
   background-color: #F0F7FA
@@ -122,10 +121,10 @@ select
         margin-bottom: 10px
         outline: medium none
         text-decoration: none
-        text-indent: -1000em
+        text-indent: -99999px
         width: 208px
     &#credit-card
-      width: 550px //800
+      width: 550px
       float: left
       margin-bottom: 20px
       li
@@ -169,7 +168,8 @@ select
 
 #info
   clear: both
-  height: 410px
+  width: 100%
+  float: left
 
 #total
   background-color: #FFFFFF
@@ -236,3 +236,12 @@ select
       .amount
         font-size: 11px
         color: #777
+        
+#billing
+  p.inline-errors
+    display: block
+    clear: both
+    margin: 0
+    color: red
+    margin-left: 125px
+    font-size: 12px
