fixed privacy policy

--- a/app/views/home/privacy_policy.html.haml
+++ b/app/views/home/privacy_policy.html.haml
@@ -1,6 +1,6 @@
-%h1 Política de Privacidade
+%h1{"style" => "color: #3D7996"} Política de Privacidade
 
-%p Esta Política de Privacidade e suas regras aplica-se apenas ao site do grupo Multi.
+%p Esta Política de Privacidade e suas regras aplicam-se apenas ao site do grupo Multi.
 
 %p Nossa política de privacidade tem como objetivo deixar claro o compromisso do grupo Multi em garantir a proteção dos dados de nossos clientes e visitantes ao navegar em nosso site, bem como tornar claro outras questões relativas à segurança.
 
