subscribe errors on css and IE8 bugs fixed

--- a/app/assets/stylesheets/application/base.sass
+++ b/app/assets/stylesheets/application/base.sass
@@ -144,7 +144,7 @@ form
   background-image: -o-linear-gradient(top, #007ACC, #0149CC)
   background-image: linear-gradient(to bottom, #007ACC, #0149CC)
   background-repeat: repeat-x
-  border-color: #FFA92E #FFA92E #FDBA12
+  border-color: #007ACC #007ACC #0149CC
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25)
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#007ACC', endColorstr='#0149CC', GradientType=0)
   filter: progid:DXImageTransform.Microsoft.gradient(enabled=false)
