--- a/app/assets/stylesheets/application/search.sass
+++ b/app/assets/stylesheets/application/search.sass
@@ -74,8 +74,9 @@
     input
       background: image-url("application/search-input-1.png") no-repeat scroll center center transparent
       border: medium none
-      height: 31px
+      height: 23px
       padding-left: 10px
+      padding-top: 5px
       width: 666px
       float: left
   input.btn-search
