--- a/app/assets/stylesheets/application/subscribe.sass
+++ b/app/assets/stylesheets/application/subscribe.sass
@@ -59,6 +59,13 @@ select
 
 
 #billing
+  p.inline-errors
+    display: block
+    clear: both
+    margin: 0
+    color: red
+    margin-left: 125px
+    font-size: 12px
   label
     font-size: 14px
     color: #777
